deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "project-ta-v1"
  namespace: "shlink"
  labels:
    app: "project-ta-v1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "project-ta-v1"
  template:
    metadata:
      labels:
        app: "project-ta-v1"
    spec:
      containers:
      - name: "certain-torus-sha256-1"
        image: "asia-southeast2-docker.pkg.dev/certain-torus-419710/project-ta/certain-torus@sha256:09f33608762b6c4c6f77bfcd051cdc125b12608e76684529b1ece71dd640d468"
