service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-ta-v1-service
  namespace: shlink
spec:
  selector:
    app: project-ta-v1
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
  type: NodePort
